fix (Header): align vertically

--- a/frontend/src/components/app-shell/header/Header.scss
+++ b/frontend/src/components/app-shell/header/Header.scss
@@ -5,6 +5,8 @@ header {
 	right: 0;
 	z-index: 1000;
 	height: var(--header-height);
+	display: grid;
+	align-items: center;
 	transition: all 0.5s;
 
 	&.hidden {
